--- a/tensorboard/plugins/scalar/tf_scalar_dashboard/tf-scalar-dashboard.html
+++ b/tensorboard/plugins/scalar/tf_scalar_dashboard/tf-scalar-dashboard.html
@@ -310,7 +310,7 @@ limitations under the License.
       },
 
       resetAllDomains() {
-        const charts = this.querySelectorAll('tf-line-chart-data-loader');
+        const charts = this.root.querySelectorAll('tf-line-chart-data-loader');
         charts.forEach((chart) => {chart.resetDomain()});
       },
 
